updated ui and added projects

--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
             <div class="right">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/">About</a></li>
-                    <li><a href="/">Services</a></li>
-                    <li><a href="/">Projects</a></li>
-                    <li><a href="/">contact me</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact me</a></li>
                 </ul>
             </div>
         </nav>
     </header>
-
-
 
     <main>
 
@@ -38,11 +35,11 @@
             </div>
 
             <div class="rigthsec ">
-                <img  style="width: 400px; height: 400px; border-radius: 50%;" src="Me.png" alt="">
+                <img  style="width: 370px; height: 370px; border-radius: 50%;" src="image copy.png" alt="">
             </div>
         </section>
         <hr>
-        <div class="heading">
+        <div class="heading" id="skills">
             <h1>Professional Skillset</h1>
         </div>
         <section class="second">
@@ -54,10 +51,12 @@
                 <div class="box"> <img src="python.png" alt=""></div>
                 <div class="box"> <img src="java.png" alt=""></div>
                 <div class="box"> <img src="figma.png" alt=""></div>
+                <div class="box"> <img src="download.png" alt=""></div>
+                <div class="box"> <img src="mysql.png" alt=""></div>
             </div>
         </section>
 
-        <h1 class="proj">My
+        <h1 class="proj" id="projects">My
             <b>Projects</b>
         </h1>
         <section class="third ">
@@ -65,36 +64,35 @@
             <div class="myprojects">
                 <div class="leftthird">
                     <!-- <video class="bkl" src="galaxy.mp4"></video> -->
-                    <div class="projectbox">
+                    <div class="projectbox fadeaway">
                         <div class="txt">
-                            <h2>Spotify clone</h2>
-                            <p>spotify is a leading digital music streaming platform offering access to millions of
-                                songs, podcasts, and curated playlists.</p>
+                            <h2>Sundown Studio</h2>
+                            <p></p>
                             <a href="/">Code</a>
                             <a href="/">Demo</a>
                         </div>
-                        <img width="200px" height="150" src="react.png" alt="">
+                        <img width="180px" height="140" src="Screenshot 2025-04-28 at 6.21.18 PM.png" alt="">
 
                     </div>
-                    <div class="projectbox ">
+                    <div class="projectbox fadeaway">
                         <div class="txt">
-                            <h2>Weather application</h2>
-                            <p>A responsive application for real time weather update</p>
+                            <h2>LearnHub</h2>
+                            <p>A responsive application for College review</p>
                             <a href="/">Code</a>
                             <a href="/">Demo</a>
                         </div>
-                        <img width="200px" height="150" src="react.png" alt="">
+                        <img width="180px" height="150" src="Screenshot 2025-04-28 at 6.08.49 PM.png" alt="">
                     </div>
 
                     <div class="projectbox fadeaway">
                         <div class="txt">
-                            <h2>Spotify clone</h2>
-                            <p>spotify is a leading digital music streaming platform offering access to millions of
-                                songs, podcasts, and curated playlists.</p>
+                            <h2>Evon</h2>
+                            <p>Landing page of a car website in react js 
+                                </p>
                             <a href="/">Code</a>
                             <a href="/">Demo</a>
                         </div>
-                        <img width="200px" height="150" src="react.png" alt="">
+                        <img width="200px" height="150" src="Screenshot 2025-04-28 at 6.11.36 PM.png" alt="">
                     </div>
 
                 </div>
@@ -104,8 +102,7 @@
             </div>
         </section>
 
-
-        <section class="contact-section ">
+        <section class="contact-section " id="contact">
             <h1 class="section-title ">Let's talk 😀</h1>
             <div class="social-box">
                 <a style="color: black;" href="#"><i class='bx bx-phone-call'></i>+91-9125633331</a>
@@ -132,7 +129,7 @@
 
     <footer>
         <div class="l1"><h1>Developed by Abhiman Singh</h1></div>
-        <div class="R1">arrrow</div>
+        <div widdh='20px' class="R1">↑</div>
     </footer>
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
