--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <div class="txt">
                             <h2>Sundown Studio</h2>
                             <p></p>
-                            <a href="/">Code</a>
-                            <a href="/">Demo</a>
+                            <a href="https://github.com/Koray-afk/Sundown2">Code</a>
+                            <a href="https://sundown2-c13fpy1r6-koray-afks-projects.vercel.app/">Demo</a>
                         </div>
                         <img width="180px" height="140" src="Screenshot 2025-04-28 at 6.21.18 PM.png" alt="">
 
@@ -78,8 +78,8 @@
                         <div class="txt">
                             <h2>LearnHub</h2>
                             <p>A responsive application for College review</p>
-                            <a href="/">Code</a>
-                            <a href="/">Demo</a>
+                            <a href="https://github.com/Koray-afk/Edu-World">Code</a>
+                            <a href="https://edu-world.vercel.app/">Demo</a>
                         </div>
                         <img width="180px" height="150" src="Screenshot 2025-04-28 at 6.08.49 PM.png" alt="">
                     </div>
@@ -89,8 +89,8 @@
                             <h2>Evon</h2>
                             <p>Landing page of a car website in react js 
                                 </p>
-                            <a href="/">Code</a>
-                            <a href="/">Demo</a>
+                            <a href="https://github.com/Koray-afk/Evon">Code</a>
+                            <a href="https://evon-iota.vercel.app/">Demo</a>
                         </div>
                         <img width="200px" height="150" src="Screenshot 2025-04-28 at 6.11.36 PM.png" alt="">
                     </div>
